--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "deploy":"gh-pages -d build"
   },
   "eslintConfig": {
