--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,7 +18,7 @@
       "sizes": "512x512"
     },
     {
-      "src": "/img/marker-icon.png",
+      "src": "https://km1729.github.io/tesla/img/marker-icon.png",
       "type": "image/png",
       "sizes": "512x512"
     }
