--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,7 +18,7 @@
       "sizes": "512x512"
     },
     {
-      "src": "https://raw.githubusercontent.com/km1729/tesla/refs/heads/main/public/img/marker-icon.png",
+      "src": "marker-icon.png",
       "type": "image/png",
       "sizes": "512x512"
     }
